mpfr.v


fn C.mpfr_greaterequal_p (&Bigfloat, &Bigfloat) int

pub fn greaterequal_p (a Bigfloat, b Bigfloat) int {
	return C.mpfr_greaterequal_p (&a, &b)
}

fn C.mpfr_less_p (&Bigfloat, &Bigfloat) int

pub fn less_p (a Bigfloat, b Bigfloat) int {
	return C.mpfr_less_p (&a, &b)
}

fn C.mpfr_lessequal_p (&Bigfloat, &Bigfloat) int

pub fn lessequal_p (a Bigfloat, b Bigfloat) int {
	return C.mpfr_lessequal_p (&a, &b)
}

fn C.mpfr_lessgreater_p (&Bigfloat, &Bigfloat) int

pub fn lessgreater_p (a Bigfloat, b Bigfloat) int {
	return C.mpfr_lessgreater_p (&a, &b)
}

fn C.mpfr_equal_p (&Bigfloat, &Bigfloat) int

pub fn equal_p (a Bigfloat, b Bigfloat) int {
	return C.mpfr_equal_p (&a, &b)
}

fn C.mpfr_unordered_p (&Bigfloat, &Bigfloat) int

pub fn unordered_p (a Bigfloat, b Bigfloat) int {
	return C.mpfr_unordered_p (&a, &b)
}


fn C.mpfr_atanh (&Bigfloat, &Bigfloat, Round) int

pub fn atanh (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_atanh (&a, &b, r)
}

fn C.mpfr_acosh (&Bigfloat, &Bigfloat, Round) int

pub fn acosh (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_acosh (&a, &b, r)
}

fn C.mpfr_asinh (&Bigfloat, &Bigfloat, Round) int

pub fn asinh (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_asinh (&a, &b, r)
}

fn C.mpfr_cosh (&Bigfloat, &Bigfloat, Round) int

pub fn cosh (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_cosh (&a, &b, r)
}

fn C.mpfr_sinh (&Bigfloat, &Bigfloat, Round) int

pub fn sinh (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_sinh (&a, &b, r)
}

fn C.mpfr_tanh (&Bigfloat, &Bigfloat, Round) int

pub fn tanh (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_tanh (&a, &b, r)
}

fn C.mpfr_sinh_cosh (&Bigfloat, &Bigfloat, &Bigfloat, Round) int

pub fn sinh_cosh (a Bigfloat, b Bigfloat, c Bigfloat, r Round) int {
	return C.mpfr_sinh_cosh (&a, &b, &c, r)
}


fn C.mpfr_sech (&Bigfloat, &Bigfloat, Round) int

pub fn sech (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_sech (&a, &b, r)
}

fn C.mpfr_csch (&Bigfloat, &Bigfloat, Round) int

pub fn csch (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_csch (&a, &b, r)
}

fn C.mpfr_coth (&Bigfloat, &Bigfloat, Round) int

pub fn coth (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_coth (&a, &b, r)
}


fn C.mpfr_acos (&Bigfloat, &Bigfloat, Round) int

pub fn acos (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_acos (&a, &b, r)
}

fn C.mpfr_asin (&Bigfloat, &Bigfloat, Round) int

pub fn asin (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_asin (&a, &b, r)
}

fn C.mpfr_atan (&Bigfloat, &Bigfloat, Round) int

pub fn atan (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_atan (&a, &b, r)
}

fn C.mpfr_sin (&Bigfloat, &Bigfloat, Round) int

pub fn sin (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_sin (&a, &b, r)
}

fn C.mpfr_sin_cos (&Bigfloat, &Bigfloat, &Bigfloat, Round) int

pub fn sin_cos (a Bigfloat, b Bigfloat, c Bigfloat, r Round) int {
	return C.mpfr_sin_cos (&a, &b, &c, r)
}

fn C.mpfr_cos (&Bigfloat, &Bigfloat, Round) int

pub fn cos (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_cos (&a, &b, r)
}

fn C.mpfr_tan (&Bigfloat, &Bigfloat, Round) int

pub fn tan (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_tan (&a, &b, r)
}

fn C.mpfr_atan2 (&Bigfloat, &Bigfloat, &Bigfloat, Round) int

pub fn atan2 (a Bigfloat, b Bigfloat, c Bigfloat, r Round) int {
	return C.mpfr_atan2 (&a, &b, &c, r)
}

fn C.mpfr_sec (&Bigfloat, &Bigfloat, Round) int

pub fn sec (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_sec (&a, &b, r)
}

fn C.mpfr_csc (&Bigfloat, &Bigfloat, Round) int

pub fn csc (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_csc (&a, &b, r)
}

fn C.mpfr_cot (&Bigfloat, &Bigfloat, Round) int

pub fn cot (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_cot (&a, &b, r)
}


fn C.mpfr_hypot (&Bigfloat, &Bigfloat, &Bigfloat, Round) int

pub fn hypot (a Bigfloat, b Bigfloat, c Bigfloat, r Round) int {
	return C.mpfr_hypot (&a, &b, &c, r)
}

fn C.mpfr_erf (&Bigfloat, &Bigfloat, Round) int

pub fn erf (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_erf (&a, &b, r)
}

fn C.mpfr_erfc (&Bigfloat, &Bigfloat, Round) int

pub fn erfc (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_erfc (&a, &b, r)
}

fn C.mpfr_cbrt (&Bigfloat, &Bigfloat, Round) int

pub fn cbrt (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_cbrt (&a, &b, r)
}

// #ifndef _MPFR_NO_DEPRECATED_ROOT /* for the test of this function */
// MPFR_DEPRECATED
// #endif
fn C.mpfr_root (&Bigfloat, &Bigfloat, u64, Round) int

pub fn root (a Bigfloat, b Bigfloat, f u64, r Round) int {
	return C.mpfr_root (&a, &b, f, r)
}

fn C.mpfr_rootn_ui (&Bigfloat, &Bigfloat, u64, Round) int

pub fn rootn_ui (a Bigfloat, b Bigfloat, f u64, r Round) int {
	return C.mpfr_rootn_ui (&a, &b, f, r)
}

fn C.mpfr_gamma (&Bigfloat, &Bigfloat, Round) int

pub fn gamma (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_gamma (&a, &b, r)
}

fn C.mpfr_gamma_inc (&Bigfloat, &Bigfloat, &Bigfloat, Round) int

pub fn gamma_inc (a Bigfloat, b Bigfloat, c Bigfloat, r Round) int {
	return C.mpfr_gamma_inc (&a, &b, &c, r)
}

fn C.mpfr_beta (&Bigfloat, &Bigfloat, &Bigfloat, Round) int

pub fn beta (a Bigfloat, b Bigfloat, c Bigfloat, r Round) int {
	return C.mpfr_beta (&a, &b, &c, r)
}

fn C.mpfr_lngamma (&Bigfloat, &Bigfloat, Round) int

pub fn lngamma (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_lngamma (&a, &b, r)
}

fn C.mpfr_lgamma (&Bigfloat, &int, &Bigfloat, Round) int

pub fn lgamma (a Bigfloat, i &int, s Bigfloat, r Round) int {
	return C.mpfr_lgamma (&a, i, &s, r)
}

fn C.mpfr_digamma (&Bigfloat, &Bigfloat, Round) int

pub fn digamma (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_digamma (&a, &b, r)
}

fn C.mpfr_zeta (&Bigfloat, &Bigfloat, Round) int

pub fn zeta (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_zeta (&a, &b, r)
}

fn C.mpfr_zeta_ui (&Bigfloat, u64, Round) int

pub fn zeta_ui (a Bigfloat, f u64, r Round) int {
	return C.mpfr_zeta_ui (&a, f, r)
}

fn C.mpfr_fac_ui (&Bigfloat, u64, Round) int

pub fn fac_ui (a Bigfloat, f u64, r Round) int {
	return C.mpfr_fac_ui (&a, f, r)
}

fn C.mpfr_j0 (&Bigfloat, &Bigfloat, Round) int

pub fn j0 (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_j0 (&a, &b, r)
}

fn C.mpfr_j1 (&Bigfloat, &Bigfloat, Round) int

pub fn j1 (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_j1 (&a, &b, r)
}

fn C.mpfr_jn (&Bigfloat, i64, &Bigfloat, Round) int

pub fn jn (a Bigfloat, i i64, s Bigfloat, r Round) int {
	return C.mpfr_jn (&a, i, &s, r)
}

fn C.mpfr_y0 (&Bigfloat, &Bigfloat, Round) int

pub fn y0 (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_y0 (&a, &b, r)
}

fn C.mpfr_y1 (&Bigfloat, &Bigfloat, Round) int

pub fn y1 (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_y1 (&a, &b, r)
}

fn C.mpfr_yn (&Bigfloat, i64, &Bigfloat, Round) int

pub fn yn (a Bigfloat, i i64, s Bigfloat, r Round) int {
	return C.mpfr_yn (&a, i, &s, r)
}


fn C.mpfr_ai (&Bigfloat, &Bigfloat, Round) int

pub fn ai (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_ai (&a, &b, r)
}


fn C.mpfr_min (&Bigfloat, &Bigfloat, &Bigfloat, Round) int

pub fn min (a Bigfloat, b Bigfloat, c Bigfloat, r Round) int {
	return C.mpfr_min (&a, &b, &c, r)
}

fn C.mpfr_max (&Bigfloat, &Bigfloat, &Bigfloat, Round) int

pub fn max (a Bigfloat, b Bigfloat, c Bigfloat, r Round) int {
	return C.mpfr_max (&a, &b, &c, r)
}

fn C.mpfr_dim (&Bigfloat, &Bigfloat, &Bigfloat, Round) int

pub fn dim (a Bigfloat, b Bigfloat, c Bigfloat, r Round) int {
	return C.mpfr_dim (&a, &b, &c, r)
}


fn C.mpfr_mul_z (&Bigfloat, &Bigfloat, &gmp.Bigint, Round) int

pub fn mul_z (a Bigfloat, b Bigfloat, c gmp.Bigint, r Round) int {
	return C.mpfr_mul_z (&a, &b, &c, r)
}

fn C.mpfr_div_z (&Bigfloat, &Bigfloat, &gmp.Bigint, Round) int

pub fn div_z (a Bigfloat, b Bigfloat, c gmp.Bigint, r Round) int {
	return C.mpfr_div_z (&a, &b, &c, r)
}

fn C.mpfr_add_z (&Bigfloat, &Bigfloat, &gmp.Bigint, Round) int

pub fn add_z (a Bigfloat, b Bigfloat, c gmp.Bigint, r Round) int {
	return C.mpfr_add_z (&a, &b, &c, r)
}

fn C.mpfr_sub_z (&Bigfloat, &Bigfloat, &gmp.Bigint, Round) int

pub fn sub_z (a Bigfloat, b Bigfloat, c gmp.Bigint, r Round) int {
	return C.mpfr_sub_z (&a, &b, &c, r)
}

fn C.mpfr_z_sub (&Bigfloat, &gmp.Bigint, &Bigfloat, Round) int

pub fn z_sub (a Bigfloat, b gmp.Bigint, s Bigfloat, r Round) int {
	return C.mpfr_z_sub (&a, &b, &s, r)
}

fn C.mpfr_cmp_z (&Bigfloat, &gmp.Bigint) int

pub fn cmp_z (a Bigfloat, b gmp.Bigint) int {
	return C.mpfr_cmp_z (&a, &b)
}


fn C.mpfr_fma (&Bigfloat, &Bigfloat, &Bigfloat, &Bigfloat, Round) int

pub fn fma (a Bigfloat, b Bigfloat, c Bigfloat, d Bigfloat, r Round) int {
	return C.mpfr_fma (&a, &b, &c, &d, r)
}

fn C.mpfr_fms (&Bigfloat, &Bigfloat, &Bigfloat, &Bigfloat, Round) int

pub fn fms (a Bigfloat, b Bigfloat, c Bigfloat, d Bigfloat, r Round) int {
	return C.mpfr_fms (&a, &b, &c, &d, r)
}

fn C.mpfr_fmma (&Bigfloat, &Bigfloat, &Bigfloat, &Bigfloat, &Bigfloat, Round) int

pub fn fmma (a Bigfloat, b Bigfloat, c Bigfloat, d Bigfloat, e Bigfloat, r Round) int {
	return C.mpfr_fmma (&a, &b, &c, &d, &e, r)
}

fn C.mpfr_fmms (&Bigfloat, &Bigfloat, &Bigfloat, &Bigfloat, &Bigfloat, Round) int

pub fn fmms (a Bigfloat, b Bigfloat, c Bigfloat, d Bigfloat, e Bigfloat, r Round) int {
	return C.mpfr_fmms (&a, &b, &c, &d, &e, r)
}

fn C.mpfr_sum (&Bigfloat, &Bigfloat, u64, Round) int

pub fn sum (a Bigfloat, b &Bigfloat, n u64, r Round) int {
	return C.mpfr_sum (&a, b, n, r)
}

fn C.mpfr_dot (&Bigfloat, &Bigfloat, &Bigfloat, u64, Round) int

pub fn dot (a Bigfloat, b &Bigfloat, c &Bigfloat, n u64, r Round) int {
	return C.mpfr_dot (&a, b, c, n, r)
}


fn C.mpfr_free_cache ()

pub fn free_cache () {
	C.mpfr_free_cache ()
}

fn C.mpfr_free_cache2 (C.mpfr_free_cache_t)

pub fn free_cache2 (c C.mpfr_free_cache_t) {
	C.mpfr_free_cache2 (c)
}

fn C.mpfr_free_pool ()

pub fn free_pool () {
	C.mpfr_free_pool ()
}

fn C.mpfr_mp_memory_cleanup () int

pub fn mp_memory_cleanup () int {
	return C.mpfr_mp_memory_cleanup ()
}


fn C.mpfr_subnormalize (&Bigfloat, int, Round) int

pub fn subnormalize (a Bigfloat, i int, r Round) int {
	return C.mpfr_subnormalize (&a, i, r)
}


fn C.mpfr_strtofr (&Bigfloat, &char, &&char, int, Round) int

pub fn strtofr (a Bigfloat, s &char, d &&char, b int, r Round) int {
	return C.mpfr_strtofr (&a, s, d, b, r)
}


fn C.mpfr_round_nearest_away_begin (&Bigfloat)

pub fn round_nearest_away_begin (a Bigfloat) {
	C.mpfr_round_nearest_away_begin (&a)
}

fn C.mpfr_round_nearest_away_end (&Bigfloat, int) int

pub fn round_nearest_away_end (a Bigfloat, i int) int {
	return C.mpfr_round_nearest_away_end (&a, i)
}


fn C.mpfr_custom_get_size (Mpfr_prec) u64

pub fn custom_get_size (p Mpfr_prec) u64 {
	return C.mpfr_custom_get_size (p)
}

fn C.mpfr_custom_init (voidptr, Mpfr_prec)

pub fn custom_init (ptr voidptr, p Mpfr_prec) {
	C.mpfr_custom_init (ptr, p)
}

 
fn C.mpfr_custom_get_significand (&Bigfloat) voidptr

pub fn custom_get_significand (a Bigfloat) voidptr {
	return C.mpfr_custom_get_significand (&a)
}

fn C.mpfr_custom_get_exp (&Bigfloat) i64

pub fn custom_get_exp (a Bigfloat) i64 {
	return C.mpfr_custom_get_exp (&a)
}

fn C.mpfr_custom_move (&Bigfloat, voidptr)

pub fn custom_move (a Bigfloat, ptr voidptr) {
	C.mpfr_custom_move (&a, ptr)
}

fn C.mpfr_custom_init_set (&Bigfloat, int, i64, Mpfr_prec, voidptr)

pub fn custom_init_set (a Bigfloat, k int, e i64, p Mpfr_prec, ptr voidptr) {
	C.mpfr_custom_init_set (&a, k, e, p, ptr)
}

fn C.mpfr_custom_get_kind (&Bigfloat) int

pub fn custom_get_kind (a Bigfloat) int {
	return C.mpfr_custom_get_kind (&a)
}


fn C.mpfr_total_order_p (&Bigfloat, &Bigfloat) int

pub fn total_order_p (a Bigfloat, b Bigfloat) int {
	return C.mpfr_total_order_p (&a, &b)
}


